atualização do projeto guia respostas: implementação do banco de dados com sequelize

--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -7,15 +7,17 @@
           <h3>Realizar perguntas</h3>
         </div>
         <div class="card-body">
-          <form>
+          <form method="POST" action="/salvarpergunta">
             <label>Título</label>
             <input 
+              name="titulo"
               type="text" 
               placeholder="Título" 
               class="form-control"
             >
             <label class="mt-3">Descrição</label>
             <textarea 
+              name="descricao"
               placeholder="Descreva sua pergunta aqui" 
               class="form-control"
             ></textarea>
