--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,20 @@
   <body>
     <%- include('./partials/navbar.ejs') %>
       <div class="container">
-        <h1>Guia Perguntas</h1>
+        <hr>
+        <h1>Perguntas</h1>
+        <a href="/perguntar" class="btn btn-primary">Perguntar</a>
+        <hr>
+        <% perguntas.forEach((pergunta) => { %>
+          <div class="card mt-3">
+            <div class="card-header">
+              <h3><%= pergunta.titulo %></>
+            </div>
+            <div class="card-footer">
+              <button type="button" class="btn btn-primary">responder</button>
+            </div>
+          </div>
+        <% }) %>
       </div>
   </body>
 
