--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -23,6 +23,8 @@
             ></textarea>
       
             <button class="btn btn-primary mt-3">Perguntar</button>
+
+            <a href="/" class="btn btn-primary mt-3">Voltar</a>
             
           </form>
         </div>
