--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -8,13 +8,23 @@
         <p><%= pergunta.descricao %></p>
         <hr>
         <form method="POST" action="/responder">
-          <h3>Responda</h3>
-          <label>Resposta:</label>
+          <label class="resposta">Resposta:</label>
           <textarea placeholder="Digite sua resposta" class="form-control" name="corpo"></textarea>
           <input type="hidden" name="pergunta" value="<%= pergunta.id %>">
           <button type="submit" class="btn btn-primary mt-3">Responder</button>
           <a href="/" class="btn btn-primary mt-3">Voltar</a>
         </form>
+        <hr>
+        <% respostas.forEach(resposta => { %>
+          <div class="card mt-2">
+            <div class="card-header">
+              <h3>Resposta</h3>
+            </div>
+            <div class="card-body">
+              <p><%= resposta.corpo %></p>
+            </div>
+          </div>
+        <% }) %>
       </div>
   </body>
 
